[gd_scene load_steps=7 format=3 uid="uid://dgdwgiecxcc07"]

[ext_resource type="PackedScene" uid="uid://83nkoefnolld" path="res://Admin/User_List.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://8vmglle55u7i" path="res://Admin/Admin_Entries_List.tscn" id="2"]
[ext_resource type="Script" path="res://Admin/Lobby_Admin.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://dxihq3lck8fc5" path="res://Entry_Log/Entry_Log_List.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cyx5gyb4q2cih" path="res://Bingo/Bingo.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://7fwlp504k7r0" path="res://Admin/Bingo_Confirm_Popup.tscn" id="6"]

[node name="Lobby_Admin" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("3")

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="Lobby_Admin" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby_Admin"]
layout_mode = 2

[node name="Label" type="Label" parent="Lobby_Admin/HBoxContainer"]
layout_mode = 2
text = "Server"

[node name="HBoxContainer" type="HBoxContainer" parent="Lobby_Admin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="Copy_IP_Button" type="Button" parent="Lobby_Admin/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Copy"

[node name="IP_Address" type="Label" parent="Lobby_Admin/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "IP"

[node name="Label" type="Label" parent="Lobby_Admin/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = ":"

[node name="Port" type="Label" parent="Lobby_Admin/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Port"

[node name="HBoxContainer2" type="HBoxContainer" parent="Lobby_Admin"]
layout_mode = 2

[node name="Bingo_Entries_Container" parent="Lobby_Admin/HBoxContainer2" instance=ExtResource("2")]
layout_mode = 2

[node name="Scroll" type="ScrollContainer" parent="Lobby_Admin/HBoxContainer2"]
custom_minimum_size = Vector2(456, 526)
layout_mode = 2

[node name="Entries_Log" parent="Lobby_Admin/HBoxContainer2/Scroll" instance=ExtResource("4")]
layout_mode = 2
size_flags_vertical = 3

[node name="User_List" parent="Lobby_Admin/HBoxContainer2" instance=ExtResource("1")]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="Bingo_Popup" type="PanelContainer" parent="."]
visible = false
layout_mode = 0
offset_left = 284.465
offset_top = -1.55731
offset_right = 798.465
offset_bottom = 512.443

[node name="VBoxContainer" type="VBoxContainer" parent="Bingo_Popup"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Bingo_Popup/VBoxContainer"]
layout_mode = 2

[node name="Bingo_Popup_Label" type="Label" parent="Bingo_Popup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Username"

[node name="Close_Button" type="Button" parent="Bingo_Popup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="Bingo" parent="Bingo_Popup/VBoxContainer" instance=ExtResource("5")]
layout_mode = 2

[node name="Bingo_Confirm_Popup" parent="." instance=ExtResource("6")]
visible = false
layout_mode = 0
offset_left = 248.025
offset_top = 31.0397
offset_right = 762.025
offset_bottom = 593.04

[connection signal="pressed" from="Lobby_Admin/HBoxContainer/HBoxContainer/Copy_IP_Button" to="." method="_on_Copy_IP_Button_pressed"]
[connection signal="pressed" from="Bingo_Popup/VBoxContainer/HBoxContainer/Close_Button" to="." method="_on_Close_Button_pressed"]
